# CrossLauncher

./: .gitignore  .gitmodules  CUSTOM.MD  README.md  README_ID.md  TV_Installation.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml
.github/workflows/: android.yml
app/: build.gradle
app/csx/: embed_res.csx
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: blank.frag  blank.vert  xmb_background.frag  xmb_background.vert  xmb_wave.frag  xmb_wave.vert
app/src/main/cpp/: Android.cpp  CMakeLists.txt  EmbedRes.cmake  Win32.cpp  XMBWaveModule.cpp
app/src/main/cpp/res/: blank.frag  blank.vert  ps3_background.frag  ps3_background.vert  ps3_sparkle.frag  ps3_sparkle.vert  ps3_wave.frag  ps3_wave.vert  psp_wave.frag  xmb_background.vert  xmb_wave.frag
app/src/main/cpp/wave/: AAssetManager_win32.cpp  AAssetManager_win32.h  GLBind.h  GLRenderer.cpp  GLRenderer.h  GLState.cpp  GLState.h  Logger.cpp  Logger.h  dictionary.cpp  dictionary.h  gl.cpp  gl.h  mathutil.cpp  mathutil.h  ps3_sparkman.cpp  ps3_wave.cpp  ps3_wave.h  psp_wave.cpp  psp_wave.h  shaders.cpp  shaders.h  shaders.hpp  states.cpp  states.h  textures.cpp  textures.h  typedefs.h  wave.cpp  wave_gl.cpp  wave_gl.h
app/src/main/res/anim/: anim_ps3_zoomfadein.xml  anim_ps3_zoomfadeout.xml
app/src/main/res/drawable/: category_games.xml  category_help.xml  category_home.xml  category_notifications.xml  category_setting.xml  category_settings_display.xml  category_settings_mods.xml  icon_cda.xml  icon_player_play.xml
app/src/main/res/layout/: activity_main.xml  activity_xmbmp.xml  activity_xmbvp.xml  layout_xmbwave.xml  notification_xmbmp_expanded.xml  notification_xmbmp_normal.xml  sample_vsh_coldboot.xml  sample_vsh_server_test_view.xml  sample_vsh_view.xml  settings_activity.xml
app/src/main/res/values/: arrays.xml  attrs.xml  attrs_v_s_h_video_control.xml  attrs_vsh_coldboot.xml  attrs_vsh_view.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-night/: styles.xml
app/src/main/res/xml/: filepaths.xml  ps3_lines_wallpaper.xml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: ForgeButtonFont.kt  GenerateEmbeddedResourceCppSourceTask.kt
customization_example/customizer_pkg/: PARAM.INI  PARAM.INI.README  icon1.pdn
customization_example/gamepad_map/: SAMPLE.README.INI
extensions/sample/: proguard-rules.pro
gradle/wrapper/: gradle-wrapper.properties
launcher_app/: build.gradle.kts
launcher_app/csx/: embed_res.csx
launcher_app/src/debug/: AndroidManifest.xml
launcher_app/src/debug/res/values/: strings.xml
launcher_app/src/dex/: AndroidManifest.xml
launcher_app/src/dex/res/values/: strings.xml
launcher_app/src/dex/res/values-in-rID/: strings.xml
launcher_app/src/dex/res/values-ja-rJP/: strings.xml
launcher_app/src/main/: AndroidManifest.xml
launcher_app/src/main/assets/: silent.aac
launcher_app/src/main/assets/licenses/: APNG4Droid.Apache2  CrossLauncher.MIT  lic.txt
launcher_app/src/main/cpp/: Android.cpp  CMakeLists.txt  EmbedRes.cmake
launcher_app/src/main/cpp/canyon/: CANYON.HPP
launcher_app/src/main/cpp/gaia/: GAIA.HPP
launcher_app/src/main/cpp/platform/: ANDROID.CPP  DESKTOP.CPP
launcher_app/src/main/cpp/platform/android/: CANYON.CPP  WAVE.CPP
launcher_app/src/main/cpp/platform/desktop/: WAVE.CPP
launcher_app/src/main/cpp/res/: ps3_background.frag  ps3_background.vert  ps3_wave.vert  psp_wave.frag  psp_wave.vert
launcher_app/src/main/cpp/vkcheck/: MAIN.CPP
launcher_app/src/main/cpp/wave/: BACKGRND.CPP  ENTRY.CPP  GLHELPER.CPP  LOGGER.CPP  Logger.h  MATHUTIL.CPP  PS3_WAVE.CPP  PSP_WAVE.CPP  SHADERS.CPP  SHADERS.HPP  SPARKMAN.CPP  STATES.CPP  WAVE.HPP  gl.cpp  mathutil.cpp  ps3_sparkman.h  ps3_wave.cpp  ps3_wave.h  psp_wave.cpp  shaders.cpp  shaders.h  states.cpp  states.h  textures.h  typedefs.h  wave.h
launcher_app/src/main/res/anim/: anim_ps3_zoomfadein.xml  anim_ps3_zoomfadeout.xml
launcher_app/src/main/res/drawable/: category_apps.xml  category_debug.xml  category_music.xml  category_shortcut.xml  ic_component_audio.xml  ic_error.xml  ic_launcher_background.xml  ic_legacy_icon_background_preview.xml  ic_music_no_album.xml  ic_short_line.xml  ic_video_no_thumb.xml  icon_account.xml  icon_button_display.xml  icon_dynamic_theme_effect.xml  icon_privacy.xml  icon_refresh.xml  icon_video_anim_icon.xml  icon_volume.xml  icon_wave_style.xml  miptex_ui_arrow.xml  mp_xmb_progressbar.xml  settings_category_app_settings.xml  settings_category_display.xml
launcher_app/src/main/res/drawable-anydpi/: common_corrupted.xml
launcher_app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
launcher_app/src/main/res/layout/: layout_xmb.xml
launcher_app/src/main/res/values/: attrs.xml  (+6 more)
launcher_app/src/main/res/values-b+jv+ID+jvlmalang/: strings.xml
launcher_app/src/main/res/values-b+jv+ID+jvmalang/: strings.xml
launcher_app/src/main/res/values-b+jv+ID+ltlagung/: strings.xml
launcher_xlib/: PluginDefinitionScheme.xsd  README.MD  XMLScheme.xsd  build.gradle.kts  consumer-rules.pro
launcher_xlib/src/main/: AndroidManifest.xml
other_asset/vshbtn/: README.txt  compile.bat  test.html  vshbtn.py
plugin_sample/: build.gradle.kts
plugins/extensions/: build.gradle.kts
plugins/plugin_sample/: build.gradle.kts  proguard-rules.pro
plugins/plugin_sample/src/main/: AndroidManifest.xml
(+358 files in other folders)
